Update functionality to edit user's profile

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,4 +8,7 @@ spring.data.mongodb.port=27017
 spring.data.mongodb.host=localhost
 spring.data.mongodb.repositories.enabled=true
 
+#Profile Picture Image Path
+profilePicturePath=D:/images/Springboot-profile-picture/
+
 
