update and refactoring user's functionality, and add for admin

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,4 +11,7 @@ spring.data.mongodb.repositories.enabled=true
 #Profile Picture Image Path
 profilePicturePath=D:/images/Springboot-profile-picture/
 
+#JWT Access Token Timeout
+jwt.token.timeout=3600000
+
 
