update functionality and bug fixing of bad credentials exception

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,5 +13,5 @@ profilePicturePath=D:/images/Springboot-profile-picture/
 
 #JWT Access Token Timeout
 jwt.token.timeout=3600000
-
+spring.jwt.client.secret=test
 
